@@ -31,7 +31,9 @@ class Library(ABC):
         self.show_map = {}
         self.imdb_map = {}
         self.anidb_map = {}
+        self.reverse_anidb = {}
         self.mal_map = {}
+        self.reverse_mal = {}
         self.movie_rating_key_map = {}
         self.show_rating_key_map = {}
         self.imdb_rating_key_map = {}
@@ -404,5 +406,11 @@ class Library(ABC):
                 if imdb_id:
                     self.imdb_rating_key_map[key] = imdb_id[0]
                     util.add_dict_list(imdb_id, key, self.imdb_map)
+        self.reverse_anidb = {}
+        for k, v in self.anidb_map.items():
+            self.reverse_anidb[v] = k
+        self.reverse_mal = {}
+        for k, v in self.mal_map.items():
+            self.reverse_mal[v] = k
         logger.info("")
         logger.info(f"Processed {len(items)} {self.type}s")
